--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,10 +1,10 @@
 .main-container {
   display: grid;
   grid-template-areas:
-    "main main main"
-    "main main main"
-    "main main main";
-  grid-template-columns: repeat(3, auto);
+    "main main main main main"
+    "main main main main main"
+    "main main main main main";
+  grid-template-columns: repeat(5, auto);
   grid-template-rows: repeat(3, auto);
 }
 
@@ -15,17 +15,3 @@
   align-items: center;
   flex-direction: column;
 }
-
-/* **************************************************************************************************** */
-
-/* MEDIA QUERIES START */
-
-@media only screen and (max-width: 680px) {
-  .categories {
-    flex-wrap: wrap;
-  }
-}
-
-/* MEDIA QUERIES END */
-
-/* **************************************************************************************************** */
