--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -4,8 +4,8 @@
     "aside main main main main"
     "aside main main main main"
     "aside main main main main";
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(5, auto);
+  grid-template-rows: repeat(3, auto);
 }
 
 .main {
@@ -24,26 +24,18 @@
   flex-direction: column;
   gap: 3rem;
   padding: 2rem;
-  /* background-color: var(--light-color);
-  color: var(--dark-color); */
 }
 
 /* **************************************************************************************************** */
 
 /* MEDIA QUERIES START */
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 720px) {
   .main-container {
-    grid-template-rows: 0.6fr repeat(3, 2fr) 1fr;
-  }
-
-  .header {
-    align-items: center;
-    justify-content: center;
-  }
-
-  .portrait-cards > * {
-    flex-wrap: wrap;
+    grid-template-areas:
+      "aside aside aside aside aside"
+      "main main main main main"
+      "main main main main main";
   }
 }
 
